# BraceRobot

./: .gitignore  PDO_CONFIGURATION_SOLUTION.md  ReadMe.md  SINE-SDE-V2.10(2).xml  SLAVE_STATE_EXPLANATION.md  SLAVE_STATE_MEMORY_LAYOUT.md
docs/: CIA402_CONTROL_GUIDE.md  CIA402_IMPLEMENTATION_SUMMARY.md  CIA402_QUICK_REFERENCE.md  README_CIA402.md  SLAVE_STATE_READING_GUIDE.md
scripts/: install_soem.sh
src/arm/arm_control/: CMakeLists.txt  package.xml
src/arm/arm_control/include/: arm_control.h
src/arm/arm_control/launch/: arm_control.launch.py
src/arm/arm_control/src/: arm_control.cpp  kvaser.cpp
src/brace_bot/: CMakeLists.txt  package.xml
src/brace_bot/config/: brace_sequences.yaml
src/brace_bot/launch/: brace_bot_bringup.launch.py
src/brace_bot/scripts/: brace_ui_node.py
src/brace_bot/src/: brace_state_node.cpp
src/chassis/andino_base/: CMakeLists.txt
src/chassis/andino_base/applications/: CMakeLists.txt
src/chassis/andino_base/include/andino_base/: diffdrive_andino.h  kvaser.h  motor_driver.h
src/chassis/andino_base/src/: CMakeLists.txt  diffdrive_andino.cpp  kvaser.cpp  motor_driver.cpp
src/chassis/andino_bringup/launch/: andino_robot.launch.py
src/chassis/andino_description/config/andino/: hardware.yaml
src/chassis/andino_description/urdf/include/: andino_control.urdf.xacro
src/lifter_ecat/: CMakeLists.txt  package.xml
src/lifter_ecat/config/: lifter_config.yaml
src/lifter_ecat/include/lifter_ecat/: cia402.hpp  lifter.hpp
src/lifter_ecat/launch/: lifter_ecat_launch.py  lifter_launch.py
src/lifter_ecat/src/: lifter.cpp  lifter_node.cpp
src/lifter_modbus/: CMakeLists.txt  package.xml
src/lifter_modbus/config/: lifter_config.yaml
src/lifter_modbus/include/lifter_modbus/: lifter.hpp
src/lifter_modbus/launch/: lifter_test.launch.py  lifter_with_ui.launch.py
src/lifter_modbus/scripts/: lifter_ui.py
src/lifter_modbus/src/: lifter.cpp  lifter_node.cpp  lifter_test.cpp
