<?xml version="1.0"?>
<package format="3">
  <name>brace_bot</name>
  <version>0.0.1</version>
  <description>Integrated state machine for chassis, lifter and arm motors.</description>

  <maintainer email="user@example.com">brace_bot_maintainer</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>yaml-cpp</depend>

  <!-- 与 lifter_modbus、kvaser_motor_control 通过话题交互，无需直接链接 -->
  <exec_depend>lifter_modbus</exec_depend>
  <exec_depend>kvaser_motor_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
