<?xml version="1.0"?>
<package format="3">
  <name>kvaser_motor_control</name>
  <version>0.0.1</version>
  <description>Kvaser CAN motor keyboard control</description>

  <maintainer email="you@email.com">your_name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
